# rusty-shit-box

./: Cargo.toml  README.md
src/: canvas.rs  engine.rs  events.rs  lib.rs  renderable.rs  scene.rs  utils.rs
src/components/: camera.rs  mod.rs  transform.rs
src/engine/: camera.rs  cube.rs  mod.rs
src/engine/shaders/: mod.rs
src/shaders/: frag.fs  vert.vs
web/: index.html  index.js  package-lock.json  package.json
