[package]
name = "rusty-shit-box"
version = "0.1.0"
authors = ["Ryan Wise <ryan@ryanwise.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
nalgebra="0.25.4"
js-sys = "0.3.50"

[dependencies.web-sys]
version = "0.3.50"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlRenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
    'console',
]